# polymarket-bot

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  analyze_weather.py  analyze_weather_full.py  btc_preclose_cron.sh  fills-loop.out  pyproject.toml  run.sh
docs/: CREDENTIALS.md  auth.md  ops.md  st1ne-assistant-notes.md
scripts/: check-credentials.sh  load-env-from-1password.sh  run-fills-loop-with-creds.sh  run-fills-loop.sh
src/polymarket/: __init__.py  accounting.py  binance_collector.py  cli.py  (+49 more)
systemd/: README.md  collect-fills-loop.service  polymarket-fills-loop.service  polymarket-watchdog.service  polymarket-watchdog.timer
tests/: test_accounting.py  test_binance.py  test_btc_both_sides_arb.py  test_cli.py  test_collector_loop.py  test_combinatorial.py  test_config.py  test_copy_trading.py  test_copytrade_profiler.py  test_cross_market.py  test_dataset_join.py  test_fills_collector.py  test_fills_loop.py  test_fills_monitor.py  test_microstructure.py  test_odds_api.py  test_paper_fill_loop.py  test_paper_pnl.py  test_paper_trading.py  test_pnl.py  test_pnl_loop.py  test_pnl_sanity_check.py  test_pricefeed.py  test_pricefeed_features.py  test_report.py  test_sports_arbitrage.py  test_sports_markets.py  test_strategy_discounted_outcome.py  test_strategy_imbalance.py  test_strategy_maker_fee_asymmetry.py  test_strategy_mention.py  test_strategy_news_momentum.py  test_strategy_no_bias.py  test_strategy_weather.py  test_trader_fills.py  test_trader_leaderboard.py  test_trader_profiler.py  test_trading.py  test_watchdog.py  test_weather.py
(+13 files in other folders)
